AC_INIT([A python 2 parser],
        [0.1],
        [evilissimo@gmail.com],
        [pypa],
        [http://github.com/vinzenz/pypa])
AC_PREREQ([2.59])

m4_pattern_allow([AM_PROG_AR])

AM_INIT_AUTOMAKE([1.10 -Wall no-define subdir-objects])

AC_PROG_CXX
AM_PROG_AR
AC_CONFIG_MACRO_DIR([m4])
LT_INIT

AC_CONFIG_FILES([
    Makefile
    src/Makefile
])
AC_OUTPUT
